Fix shadow on mobile devices

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,6 +4,7 @@
 
 html {
 	height: 100%;
+	background-color: white;
 }
 
 body {
@@ -14,6 +15,7 @@ body {
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	height: 100%;
+	background-color: white;
 }
 
 code {
@@ -23,4 +25,5 @@ code {
 
 #root {
 	height: 100%;
+	background-color: white;
 }
